fix date in add and edit transaction, add min-width of table (table was too narrow when there was no transactions)

--- a/src/components/HomeTab/HomeTab.module.css
+++ b/src/components/HomeTab/HomeTab.module.css
@@ -20,6 +20,7 @@
 .homeTab {
   position: relative;
   height: 60vh;
+  min-width: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
 
